# stevetimberman-site

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
frontend/: .prettierrc.yml  package.json
frontend/src/: App.js
frontend/src/components/: Avatar.js  BioCard.js  Header.js  Icon.js  IconGroup.js
