[tool.poetry]
name = "stevetimberman-site"
version = "0.1.0"
description = "Steve Timberman's personal site."
authors = ["steventimberman <stevetimberman@gmail.com>"]
readme = "README.md"
packages = [{include = "stevetimberman_site"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pre-commit = "^2.16.0"
black = "^21.12-beta.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"
blacken-docs = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
